pita part de error handling, merci Ali
